# CosyVoice

./: .gitattributes  .gitignore  .gitmodules  CODE_OF_CONDUCT.md  FAQ.md  GPU诊断.bat  LICENSE  README.md  README_eval.md  README_quantization.md  api.py  api_requirements.txt  auto_task.py  bench_cosyvoice3.py  bench_push.py  client.sh  cog.yaml  cosyvoice_2_demo.py  cosyvoice_demo_quant_compare.py  cuda_check.py  demo.py  deploy-hf.py  deploy-hf.sh  dome.py  download.py  download_models.py  dump_onnx_nodes.py  dump_snake_alphas.py  example.py  example_instructions.html  fe_cache.py  gen_wav.py  go-api-conda.bat  go-api.bat  go-webui-conda.bat  go-webui.bat  gpu_diagnostics.py  load_test.py  load_test_short.py  load_test_stream.py  (+66 more)
.agent/: backlog.md  plan.md  request.md  session.json
.agent/rules/: cody-style-guide.md
.agent/workflows/: auto-solve-v2.md  auto-solve.md
.codeboarding/: Application_Layer.md  Data_Preparation_Management.md  General_Utilities.md  Training_Management.md  on_boarding.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: lint.yml
asset/: HarryPorter.txt  harry_potter_snape_injured.txt  laoxu.txt  wzy_read_poet_27s.txt  zero_shot_prompt.txt
configs/: base.yaml  s2st_pipeline_vanilla.yaml
cosyvoice/cli/: cosyvoice.py  frontend.py  model.py
cosyvoice/dataset/: dataset.py  processor.py
cosyvoice/flow/: decoder.py  flow.py  flow_matching.py  length_regulator.py
cosyvoice/flow/DiT/: dit.py  dit_model.py  dit_modules.py  modules.py
cosyvoice/hifigan/: discriminator.py  f0_predictor.py  generator.py  hifigan.py
cosyvoice/llm/: llm.py  llm_dpo.py  llm_vllm.py  vllm_use_cosyvoice2_model.py
cosyvoice/tokenizer/: tokenizer.py
cosyvoice/transformer/: activation.py  attention.py  convolution.py  decoder.py  embedding.py  encoder.py  encoder_layer.py  label_smoothing_loss.py  positionwise_feed_forward.py  subsampling.py  upsample_encoder.py
cosyvoice/trt/: estimator_trt.py
cosyvoice/utils/: AudioProcessor.py  ModelManager.py  TextProcessor.py  audio_utils.py  class_utils.py  common.py  device.py  executor.py  executor_dpo.py  executor_gan.py  file_utils.py  frontend_utils.py  losses.py  losses_dpo.py  mask.py  onnx.py  scheduler.py  train_utils.py  train_utils_dpo.py
cosyvoice/vllm/: cosyvoice2.py
cosyvoice_inference_official_style/: README.md  requirements.txt
cosyvoice_inference_official_style/cosyvoice_lib/cli/: cosyvoice.py  frontend.py  model.py
cosyvoice_inference_official_style/cosyvoice_lib/flow/: decoder.py  flow.py  flow_matching.py  length_regulator.py
cosyvoice_inference_official_style/cosyvoice_lib/hifigan/: generator.py
cosyvoice_inference_official_style/cosyvoice_lib/llm/: llm.py
cosyvoice_inference_official_style/cosyvoice_lib/transformer/: attention.py  decoder.py  decoder_layer.py  embedding.py  encoder.py  upsample_encoder.py
cosyvoice_inference_official_style/cosyvoice_lib/utils/: class_utils.py  common.py  file_utils.py
custom/: AudioProcessor.py  CosyVoice.py  CosyVoiceFrontEnd.py  ModelManager.py  TextProcessor.py  file_utils.py
docker/: Dockerfile  requirements.txt  voice_install.sh
eval/: quality_eval.py  quality_report.json  quality_report.md
examples/grpo/cosyvoice2/: Dockerfile  README.md  huggingface_to_pretrained.py  infer_dataset.py  prepare_data.py  pretrained_to_huggingface.py  requirements.txt  reward_tts.py  run.sh  token2wav_asr_server.py
examples/libritts/cosyvoice/: path.sh  run.sh  run_all_data.sh  tts_text.json  webui_train.py
examples/libritts/cosyvoice2/: cosyvoice  run.sh  run_dpo.sh  tools  tts_text.json
examples/libritts/cosyvoice3/: local  path.sh  run.sh  run_voice_design2.sh
examples/magicdata-read/cosyvoice/: conf  path.sh  run.sh  tts_text.json
locales/: en.json  zh.json
results/s2st_pipeline_vanilla/.hydra/: config.yaml  hydra.yaml
runtime/python/: Dockerfile  client.py  cosyvoice.proto  fastapi_client.py  fastapi_server.py  path.sh  server.py
runtime/python/fastapi/: client.py  readme.txt  server.py
runtime/python/grpc/: client.py  cosyvoice.proto  server.py
runtime/triton_trtllm/: Dockerfile.server  README.Cosyvoice2.DiT.md  README.Cosyvoice2.Unet.md  README.Cosyvoice3.md  README.DIT.md  README.md  client_grpc.py  client_http.py  docker-compose.cosyvoice3.yml  docker-compose.dit.yml  docker-compose.yml  infer_cosyvoice3.py  offline_inference.py  requirements.txt  run.sh  run_cosyvoice3.sh  run_stepaudio2_dit_token2wav.sh  streaming_inference.py  token2wav.py  token2wav_cosyvoice3.py  token2wav_dit.py
runtime/triton_trtllm/cosyvoice3_trt_fp16_fixed/: qps_rslt.md
runtime/triton_trtllm/cosyvoice3_trt_fp16_fixed/v1_plugin/plugin_ln_3d_eps6/: CMakeLists.txt  make.sh
runtime/triton_trtllm/cosyvoice3_trt_fp16_fixed/v1_plugin/plugin_ln_3d_eps6/include/: cuda_utils_custom.h
runtime/triton_trtllm/cosyvoice3_trt_fp16_fixed/v1_plugin/plugin_ln_3d_eps6/kernel/: cus_ln.cu  cus_ln.h
runtime/triton_trtllm/cosyvoice3_trt_fp16_fixed/v1_plugin/plugin_ln_3d_eps6/plugin/: cus_ln_plugin.cpp  cus_ln_plugin.h
runtime/triton_trtllm/cosyvoice3_trt_plugin/: onnx_layernorm_replace.py
runtime/triton_trtllm/flow_estimator_trtllm/: README.md  conversion.ipynb  convert_checkpoint.py  dit_block_trt.py  dit_trt.py  modules_trt.py  (+1 more)
rust/: Cargo.toml  README.md  run_server.sh
rust/client/: Cargo.toml
rust/client/src/: main.rs
rust/proto/: Cargo.toml
rust/proto/src/: cosyvoice.rs  lib.rs
rust/server/: Cargo.toml
rust/server/src/: gpu_optimizer.rs  main.rs
tools/: auto_task_help.py  book2chapter.py  bookname2role.py  check_spk.py  extract_embedding.py  extract_speech_token.py  extract_style_embedding.py  format_text.py  hifigan.py  make_parquet_list.py  make_parquet_list_dpo.py  make_parquet_list_voice_design.py  model.py  models_download.py  sft_en_test.py  sft_speak_id.py  sft_test.py  vad.py  zero_short_speak_id.py  zero_short_test.py
tools/asr/: funasr_asr.py
tools/zh_normalization/: text_normlization.py
voice/gyeongyeon/: prompt.txt
voice/woon/: prompt.txt
web/: index.html
音频输出/: audio is here  output.srt
(+54 files in other folders)
