[workspace]
resolver = "2"
members = ["proto", "server", "client"]

[workspace.package]
version = "0.1.0"
authors = ["Grant <grantjr1842@github.com>"]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/grantjr1842/CosyVoice"

[workspace.dependencies]
# gRPC and async
tonic = "0.12"
tonic-build = "0.12"
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1.42", features = ["full"] }
tokio-stream = "0.1"

# HTTP client for Python backend
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
bytes = "1.11"

# Audio
hound = "3.5"
cpal = "0.15"
rubato = "0.16"  # Resampling

# CLI and logging
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Async utilities
futures = "0.3"
async-stream = "0.3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
