[package]
name = "cosyvoice-client"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CosyVoice gRPC client with real-time audio streaming and WAV output"

[[bin]]
name = "cosyvoice-client"
path = "src/main.rs"

[dependencies]
cosyvoice-proto = { path = "../proto" }
tonic.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
prost.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
futures.workspace = true

# Audio
hound.workspace = true
cpal = { workspace = true, optional = true }
rubato.workspace = true

[features]
default = []
playback = ["cpal"]
